{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 66,
  "lineage": "166180e3-100f-2a90-28b2-c829dd609ee7",
  "resources": [
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:332745928618:network-acl/acl-020b9193c56dba1e6",
            "default_network_acl_id": "acl-020b9193c56dba1e6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-020b9193c56dba1e6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "332745928618",
            "subnet_ids": [
              "subnet-01db5f73e8e3da3fc",
              "subnet-0af8afcf18ccc1635",
              "subnet-0dd5fc898a07279e2"
            ],
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-default",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-default",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "vpc_id": "vpc-070bf896378c0ec67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_base.module.vpc.aws_vpc.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:332745928618:route-table/rtb-0dc5b9cdd03b95038",
            "default_route_table_id": "rtb-0dc5b9cdd03b95038",
            "id": "rtb-0dc5b9cdd03b95038",
            "owner_id": "332745928618",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-default",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-default",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-070bf896378c0ec67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_base.module.vpc.aws_vpc.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:332745928618:security-group/sg-0ddea38522352bbdf",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddea38522352bbdf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all internal TCP and UDP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "332745928618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-sg",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-sg",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "vpc_id": "vpc-070bf896378c0ec67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_base.module.vpc.aws_vpc.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0094198508cd04b9b",
            "arn": "arn:aws:ec2:ca-central-1:332745928618:elastic-ip/eipalloc-0094198508cd04b9b",
            "association_id": "eipassoc-00e56c5a73c3991cc",
            "domain": "vpc",
            "id": "eipalloc-0094198508cd04b9b",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-093f083187f46b0b5",
            "private_dns": "ip-10-4-27-58.ca-central-1.compute.internal",
            "private_ip": "10.4.27.58",
            "public_dns": "ec2-15-157-128-125.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.157.128.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-ca-central-1a",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-ca-central-1a",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_internet_gateway.this",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:332745928618:internet-gateway/igw-0e91fff5db8f24cdb",
            "id": "igw-0e91fff5db8f24cdb",
            "owner_id": "332745928618",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "vpc_id": "vpc-070bf896378c0ec67"
          },
          "dependencies": [
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0094198508cd04b9b",
            "association_id": "eipassoc-00e56c5a73c3991cc",
            "connectivity_type": "public",
            "id": "nat-053ad7a2a68be7715",
            "network_interface_id": "eni-093f083187f46b0b5",
            "private_ip": "10.4.27.58",
            "public_ip": "15.157.128.125",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dd5fc898a07279e2",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-ca-central-1a",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-ca-central-1a",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            }
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_eip.nat",
            "module.aws_base.module.vpc.aws_internet_gateway.this",
            "module.aws_base.module.vpc.aws_subnet.public",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a937a0a0b898c7141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-053ad7a2a68be7715",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a937a0a0b898c714",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_eip.nat",
            "module.aws_base.module.vpc.aws_internet_gateway.this",
            "module.aws_base.module.vpc.aws_nat_gateway.this",
            "module.aws_base.module.vpc.aws_route_table.private",
            "module.aws_base.module.vpc.aws_subnet.public",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e91fff5db8f24cdb",
            "id": "r-rtb-0fa18f9701eece4661080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fa18f9701eece466",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_base.module.vpc.aws_internet_gateway.this",
            "module.aws_base.module.vpc.aws_route_table.public",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:332745928618:route-table/rtb-0a937a0a0b898c714",
            "id": "rtb-0a937a0a0b898c714",
            "owner_id": "332745928618",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-053ad7a2a68be7715",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-private",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-private",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-070bf896378c0ec67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:332745928618:route-table/rtb-0fa18f9701eece466",
            "id": "rtb-0fa18f9701eece466",
            "owner_id": "332745928618",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e91fff5db8f24cdb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-public",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-public",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-070bf896378c0ec67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cebc9673f74eee6",
            "route_table_id": "rtb-0a937a0a0b898c714",
            "subnet_id": "subnet-01db5f73e8e3da3fc"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_route_table.private",
            "module.aws_base.module.vpc.aws_subnet.private",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c087df624d0e0a37",
            "route_table_id": "rtb-0a937a0a0b898c714",
            "subnet_id": "subnet-0af8afcf18ccc1635"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_route_table.private",
            "module.aws_base.module.vpc.aws_subnet.private",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079f0f61091572d80",
            "route_table_id": "rtb-0fa18f9701eece466",
            "subnet_id": "subnet-0dd5fc898a07279e2"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_route_table.public",
            "module.aws_base.module.vpc.aws_subnet.public",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:332745928618:subnet/subnet-01db5f73e8e3da3fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.4.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01db5f73e8e3da3fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332745928618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-private-ca-central-1a",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-private-ca-central-1a",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "vpc_id": "vpc-070bf896378c0ec67"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:332745928618:subnet/subnet-0af8afcf18ccc1635",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.4.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af8afcf18ccc1635",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332745928618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-private-ca-central-1b",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-private-ca-central-1b",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "vpc_id": "vpc-070bf896378c0ec67"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:332745928618:subnet/subnet-0dd5fc898a07279e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.4.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd5fc898a07279e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332745928618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-public-ca-central-1a",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-public-ca-central-1a",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "vpc_id": "vpc-070bf896378c0ec67"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:332745928618:vpc/vpc-070bf896378c0ec67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-020b9193c56dba1e6",
            "default_route_table_id": "rtb-0dc5b9cdd03b95038",
            "default_security_group_id": "sg-0ddea38522352bbdf",
            "dhcp_options_id": "dopt-004136dce1e347573",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070bf896378c0ec67",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc5b9cdd03b95038",
            "owner_id": "332745928618",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            }
          },
          "dependencies": [
            "random_string.naming"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.aws_base.module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kinesis-streams",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:332745928618:vpc-endpoint/vpce-061a4c715bf6e8cf1",
            "dns_entry": [
              {
                "dns_name": "vpce-061a4c715bf6e8cf1-ztzj5i98.kinesis.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "vpce-061a4c715bf6e8cf1-ztzj5i98-ca-central-1a.kinesis.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "vpce-061a4c715bf6e8cf1-ztzj5i98-ca-central-1b.kinesis.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "kinesis.ca-central-1.amazonaws.com",
                "hosted_zone_id": "Z021811710YC7NTNFPRQS"
              },
              {
                "dns_name": "kinesis.ca-central-1.api.aws",
                "hosted_zone_id": "Z02192431KV1Y4Z9RR17N"
              },
              {
                "dns_name": "control-kinesis.ca-central-1.amazonaws.com",
                "hosted_zone_id": "Z011338518BIMJ0PNPD95"
              },
              {
                "dns_name": "*.control-kinesis.ca-central-1.amazonaws.com",
                "hosted_zone_id": "Z011338518BIMJ0PNPD95"
              },
              {
                "dns_name": "data-kinesis.ca-central-1.amazonaws.com",
                "hosted_zone_id": "Z02193451XDO6G3YWLRUA"
              },
              {
                "dns_name": "*.data-kinesis.ca-central-1.amazonaws.com",
                "hosted_zone_id": "Z02193451XDO6G3YWLRUA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-061a4c715bf6e8cf1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0479df3a5ac2a67c0",
              "eni-05e87d2d49b043fbe"
            ],
            "owner_id": "332745928618",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ddea38522352bbdf"
            ],
            "service_name": "com.amazonaws.ca-central-1.kinesis-streams",
            "service_region": "ca-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.4.58.107",
                "subnet_id": "subnet-01db5f73e8e3da3fc"
              },
              {
                "ipv4": "10.4.74.34",
                "subnet_id": "subnet-0af8afcf18ccc1635"
              }
            ],
            "subnet_ids": [
              "subnet-01db5f73e8e3da3fc",
              "subnet-0af8afcf18ccc1635"
            ],
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-kinesis-vpc-endpoint",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-kinesis-vpc-endpoint",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-070bf896378c0ec67"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_route_table.private",
            "module.aws_base.module.vpc.aws_route_table.public",
            "module.aws_base.module.vpc.aws_subnet.private",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws_base.module.vpc_endpoints.aws_security_group.this",
            "module.aws_base.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_string.naming"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:332745928618:vpc-endpoint/vpce-0758da23a311e6e02",
            "cidr_blocks": [
              "16.12.4.0/23",
              "3.5.252.0/22",
              "52.95.190.0/24",
              "52.95.146.0/23",
              "52.95.145.0/24"
            ],
            "id": "vpce-0758da23a311e6e02",
            "owner_id": "332745928618",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7da54014",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0a937a0a0b898c714",
              "rtb-0fa18f9701eece466"
            ],
            "service_name": "com.amazonaws.ca-central-1.s3",
            "state": "available",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-s3-vpc-endpoint",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-s3-vpc-endpoint",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-070bf896378c0ec67"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_route_table.private",
            "module.aws_base.module.vpc.aws_route_table.public",
            "module.aws_base.module.vpc.aws_subnet.private",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws_base.module.vpc_endpoints.aws_security_group.this",
            "module.aws_base.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_string.naming"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:332745928618:vpc-endpoint/vpce-068e6e49427905400",
            "dns_entry": [
              {
                "dns_name": "vpce-068e6e49427905400-4fd0mztk.sts.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "vpce-068e6e49427905400-4fd0mztk-ca-central-1b.sts.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "vpce-068e6e49427905400-4fd0mztk-ca-central-1a.sts.ca-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "ZRCXCF510Y6P9"
              },
              {
                "dns_name": "sts.ca-central-1.amazonaws.com",
                "hosted_zone_id": "Z0217946PIC74U6BEWH1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-068e6e49427905400",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03e37bec8c46bafc4",
              "eni-0a1e017ffd95f591b"
            ],
            "owner_id": "332745928618",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ddea38522352bbdf"
            ],
            "service_name": "com.amazonaws.ca-central-1.sts",
            "service_region": "ca-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.4.43.194",
                "subnet_id": "subnet-01db5f73e8e3da3fc"
              },
              {
                "ipv4": "10.4.66.99",
                "subnet_id": "subnet-0af8afcf18ccc1635"
              }
            ],
            "subnet_ids": [
              "subnet-01db5f73e8e3da3fc",
              "subnet-0af8afcf18ccc1635"
            ],
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-sts-vpc-endpoint",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "demo-e7jks7-sts-vpc-endpoint",
              "Owner": "siddharth.nahar",
              "ownerEmail": "siddharth.nahar@databricks.com"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-070bf896378c0ec67"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_route_table.private",
            "module.aws_base.module.vpc.aws_route_table.public",
            "module.aws_base.module.vpc.aws_subnet.private",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws_base.module.vpc_endpoints.aws_security_group.this",
            "module.aws_base.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_string.naming"
          ]
        }
      ]
    }
  ]
}